<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_image_desc">recipe image</string>
    <string name="title_text">Recipe Title</string>
    <string name="subtitle_text">time</string>
    <string name="rating">5.0</string>
    <string name="number_list">0</string>
    <string name="default_prep">Popular Recipe for Today</string>
    <string name="text_subtitle">This is the subtitle Text</string>
    <string name="description_default">description</string>
    <string name="category_label">Category</string>
</resources>