<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/trend_card"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_item_trend"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/recipe_image_desc"
                android:src="@drawable/ic_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/trending_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background_review"
                android:drawableStart="@drawable/ic_rating"
                android:drawablePadding="2dp"
                android:gravity="center"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/rating" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/cafe_home_title"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-medium"
        android:padding="5dp"
        android:text="@string/recipe_title" />

    <TextView
        android:id="@+id/cafe_home_subtitle"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:drawableLeft="@drawable/ic_timer"
        android:drawablePadding="3dp"
        android:gravity="center_vertical"
        android:padding="2dp"
        tools:text="@string/text_subtitle"
        android:textSize="12sp" />

</LinearLayout>