<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardView.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_item_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:contentDescription="@string/recipe_image_desc"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="H,1.5:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/top_space" />

        <Space
            android:id="@+id/top_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_time"
            app:layout_constraintEnd_toStartOf="@+id/tv_item_rating"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/title_text" />

        <TextView
            android:id="@+id/tv_item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_timer"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="@+id/iv_item_image"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/subtitle_text" />

        <TextView
            android:id="@+id/tv_item_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_review"
            android:drawableEnd="@drawable/ic_rating"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            tools:text="@string/rating" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>