<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trend_card"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:fadingEdgeLength="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp">


        <ImageView
            android:id="@+id/iv_item_trend"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/recipe_image_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/trending_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/background_review"
            android:drawableStart="@drawable/ic_star"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:scaleX="1"
            android:scaleY="1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_item_trend"
            tools:text="@string/rating" />

        <TextView
            android:id="@+id/cafe_home_title"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/roboto_medium"
            android:maxLines="1"
            android:text="Cafe Title"
            android:textColor="@color/text_title"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_item_trend" />

        <TextView
            android:id="@+id/cafe_home_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawablePadding="3dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/cafe_home_title"
            app:layout_constraintStart_toStartOf="@+id/cafe_home_title"
            app:layout_constraintTop_toBottomOf="@+id/cafe_home_title"
            tools:text="@string/category_label" />

        <TextView
            android:id="@+id/cafe_home_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableLeft="@drawable/ic_baseline_location_on_16"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:textColor="@color/text_title"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/cafe_home_subtitle"
            app:layout_constraintStart_toStartOf="@+id/cafe_home_subtitle"
            app:layout_constraintTop_toBottomOf="@+id/cafe_home_subtitle"
            tools:text="location" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>


